# oxidone

./: CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  config.example.toml  release-please-config.json
.githooks/: commit-msg  pre-push
.github/: dependabot.yml
.github/workflows/: build-release.yml  ci.yml  release-please.yml
docs/adr/: 0001-local-sqlite-cache-write-through.md  0002-byo-oauth-plaintext-token.md  0003-pure-mirror-no-augmentation.md  0004-hand-rolled-rest-client.md  0005-the-elm-architecture.md  0006-btop-language-braille-for-data.md  0007-local-completion-log.md  0008-entry-type-in-title.md
docs/superpowers/specs/: 2026-07-21-global-search-design.md
src/: dateparse.rs  lib.rs  links.rs  main.rs
src/api/: fake.rs  mod.rs  rest.rs
src/app/: mod.rs
src/auth/: mod.rs  oauth.rs  store.rs
src/cache/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/keymap/: mod.rs
src/sync/: mod.rs
src/ui/: mod.rs  theme.rs
src/ui/widgets/: dueload.rs  meter.rs  mod.rs
tests/: add_task_boundary.rs  add_task_reducer.rs  app_shell.rs  cache_links.rs  cli_args.rs  complete_reducer.rs  completed_reducer.rs  completion_log.rs  config_example.rs  due_boundary.rs  due_reducer.rs  due_render.rs  edit_delete_boundary.rs  edit_delete_reducer.rs  event_classify.rs  fake_tasks_api.rs  filter_reducer.rs  filter_render.rs  horizon_reducer.rs  legend_render.rs  link_render.rs  links.rs  list_counts.rs  list_crud_boundary.rs  list_crud_reducer.rs  lists_reducer.rs  meters_render.rs  move_to_list_boundary.rs  move_to_list_reducer.rs  notes_reducer.rs  notes_render.rs  open_link_reducer.rs  refresh_reducer.rs  rest_contract.rs  search_boundary.rs  search_reducer.rs  search_render.rs  sort_views.rs  subtasks_reorder.rs  sync_lists.rs  (+8 more)
