[package]
name = "oxidone"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A single-user TUI for Google Tasks, in btop's visual language."
license = "MIT OR Apache-2.0"
repository = "https://github.com/erwins-enkel/oxidone"
readme = "README.md"
keywords = ["tui", "google-tasks", "ratatui", "productivity", "cli"]
categories = ["command-line-utilities"]

# NOTE: version reqs are best-effort (no toolchain was available at scaffold time).
# Run `cargo add <crate>` / `cargo update` to pin current releases before first build.

[lib]
name = "oxidone"
path = "src/lib.rs"

[[bin]]
name = "oxidone"
path = "src/main.rs"

[dependencies]
# TUI — held at the ratatui 0.29 line: tui-textarea 0.7 and catppuccin 2 target
# it, and `app` uses ratatui's re-exported crossterm (0.28) types directly.
# Bump the whole stack together (ratatui + crossterm + tui-textarea + catppuccin)
# once the companions ship 0.30-compatible releases.
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"      # inline multiline fallback when $EDITOR is unset
catppuccin = { version = "2", features = ["ratatui"] }  # palette -> ratatui Color

# Async runtime — scoped features only
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "process"] }

# HTTP + auth (hand-rolled REST; yup-oauth2 for the loopback flow only — see ADR-0004)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
yup-oauth2 = "12"
async-trait = "0.1"       # object-safe async TasksApi trait (or drop for RPITIT)

# Local cache (see ADR-0001) + completion log (ADR-0007)
rusqlite = { version = "0.40", features = ["bundled"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Dates — natural-language due entry + ISO fallback (local TZ)
chrono = { version = "0.4", features = ["serde"] }
interim = "0.2"

# Platform dirs (config / data / log)
directories = "6"

# Errors + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
wiremock = "0.6"          # request-building + (de)serialization contract tests
pretty_assertions = "1"

[profile.release]
strip = true
lto = "thin"
