[package]
name = "oxidone"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A single-user TUI for Google Tasks, in btop's visual language."
license = "MIT OR Apache-2.0"
repository = "https://github.com/erwins-enkel/oxidone"
readme = "README.md"
keywords = ["tui", "google-tasks", "ratatui", "productivity", "cli"]
categories = ["command-line-utilities"]

# NOTE: version reqs are best-effort (no toolchain was available at scaffold time).
# Run `cargo add <crate>` / `cargo update` to pin current releases before first build.

[lib]
name = "oxidone"
path = "src/lib.rs"

[[bin]]
name = "oxidone"
path = "src/main.rs"

[dependencies]
# TUI — ratatui 0.30 / crossterm 0.29, bumped together with catppuccin so the
# crossterm types `app` and `main` use stay in lockstep with ratatui's.
ratatui = "0.30"
crossterm = "0.29"
catppuccin = { version = "2", features = ["ratatui"] }  # palette -> ratatui Color

# Async runtime — scoped features only
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "process"] }

# HTTP + auth (hand-rolled REST; yup-oauth2 for the loopback flow only — see ADR-0004)
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
yup-oauth2 = "12"
async-trait = "0.1"       # object-safe async TasksApi trait (or drop for RPITIT)

# Local cache (see ADR-0001) + completion log (ADR-0007)
rusqlite = { version = "0.40", features = ["bundled"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Dates — natural-language due entry + ISO fallback (local TZ)
chrono = { version = "0.4", features = ["serde"] }
interim = { version = "0.2", features = ["chrono_0_4"] }

# Platform dirs (config / data / log)
directories = "6"

# Errors + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
wiremock = "0.6"          # request-building + (de)serialization contract tests
pretty_assertions = "1"
# NOTE: crossterm/chrono are NOT re-listed here — normal [dependencies] are
# already available to integration tests; only test-only crates go here.
tempfile = "3"            # isolated temp dir for the TokenStore round-trip tests

[profile.release]
strip = true
lto = "thin"
